--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -61,17 +61,6 @@
     margin-top: 15px;
   }
 
-/* The below code for the spinning animation is taken from http://jsfiddle.net/Ugc5g/1906/ */
-  #profilepic:hover {
-    -webkit-animation:spin 4s linear infinite;
-    -moz-animation:spin 4s linear infinite;
-    animation:spin 4s linear infinite;
-  }
-  @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-  @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-  @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
-/* End of spinning animation code */
-
   #NavigationUnorderedLinks {
     display: flex;
     flex-flow: nowrap;
@@ -159,4 +148,56 @@
   .content {
     margin-left: 200px;
     padding-left: 20px;
+    padding-right: 20px;
+
+  }
+
+
+  /* Chat Messages Style */
+
+  .outgoing__message {
+    /* background colour of text box */
+    background-color: aliceblue;
+    /* padding within the text box */
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    /* gap beneath the text box before next message */
+    margin-bottom: 5px;
+    /* visible border around text box */
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 7px;
+    border-color: darkcyan;
+    /* text position */
+    text-align: right;
+  }
+
+  .incoming__message {
+    /* background colour of text box */
+    background-color: darkslateblue;
+    /* padding within the text box */
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    /* gap beneath the text box before next message */
+    margin-bottom: 5px;
+    /* visible border around text box */
+    border-style: dashed;
+    border-width: 2px;
+    border-radius: 7px;
+    border-color: black;
+    /* text position */
+    text-align: left;
+    color: white;
+  }  
+
+
+  /* Style for content of chat messages */
+  .message__author {
+    text-decoration: underline;
+  }
+
+  .time_date {
+    font-weight: bold;
   }
