--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -108,11 +108,26 @@
 
   #informationtextcontainer {
     display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
   }
 
   .informationtext {
-    flex-grow: 1;
-  }
+    /* flex-grow: 1;
+    flex-basis: 33%;
+    min-width: 33px; */
+
+    padding: 10px;
+
+    margin-left: 2px;
+    margin-right: 2px;
+
+    border: lightblue;
+    border-style: solid;
+    border-width: 2px;
+    border-radius: 7px;
+  } 
 
 
   /* Style the side navigation */
