--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -117,8 +117,17 @@
       text-decoration: underline;
 
       text-align: center;
+    }
 
-      cursor: pointer;
+    .pointertext {
+        cursor: pointer;
+    }
+
+    #equalityslideimg, #techcrewimg {
+      /* https://www.w3schools.com/howto/howto_css_image_center.asp */
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
     }
   /* End of index.html specific CSS*/
 
