--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -19,6 +19,15 @@
     max-width:100%;
   }
 
+  footer {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+
+    background-color: #1d2951;
+    color: white;
+  }
   /* Navigation Bar CSS */
     /* "Skip to main content code" taken from https://www.w3schools.com/accessibility/accessibility_skip_links.php */
       .skip {
@@ -123,7 +132,7 @@
         cursor: pointer;
     }
 
-    #equalityslideimg, #techcrewimg {
+    #equalityslideimg, #techcrewimg, #standingphoto {
       /* https://www.w3schools.com/howto/howto_css_image_center.asp */
       display: block;
       margin-left: auto;
