--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -212,7 +212,7 @@
 
   .incoming__message {
     /* background colour of text box */
-    background-color: darkslateblue;
+    background-color: /*darkslateblue*/ #5d8aa8;
     /* padding within the text box */
     padding-left: 10px;
     padding-right: 10px;
@@ -223,7 +223,7 @@
     border-style: dashed;
     border-width: 2px;
     border-radius: 7px;
-    border-color: black;
+    border-color: #035096;
     /* text position */
     text-align: left;
     color: white;
