add typing indicator to chat

--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -312,6 +312,32 @@
       /* text position */
       text-align: center;    
     }
+
+    .typingcontainer {
+      display: flex;
+      justify-content: flex-start;
+      margin: 0px;
+    }
+
+    .typing {
+      /* background colour of text box */
+      background-color: white;
+      /* padding within the text box */
+      padding: 5px;
+      /* gap beneath the text box before next message */
+      margin-top: 0px;
+      margin-bottom: 10px;
+      /* visible border around text box */
+      border-style: dotted;
+      border-width: 2px;
+      border-radius: 7px;
+      border-color: grey;
+      /* text position */
+      text-align: center; 
+      /* text style */
+      font-style: italic;
+      color: rgb(27, 27, 27);
+    }
   
   /* End of Chat Alert Messages CSS */
 
