--- a/public/css/myStyles.css
+++ b/public/css/myStyles.css
@@ -122,7 +122,7 @@
 
   /* Image Property CSS from https://www.w3schools.com/howto/howto_css_image_center.asp */
 
-    #equalityslideimg, #techcrewimg, #standingphoto {
+    #equalityslideimg, #techcrewimg, #standingphoto, #rabbitsphoto {
       display: block;
       margin-left: auto;
       margin-right: auto;
